# Deep-research-

./: .gitignore  CLAUDE.md  GUIDE.md  README.md  langgraph.json  pyproject.toml  requirements.txt
notebooks/: 1_scoping.ipynb  2_research_agent.ipynb  3_research_agent_mcp.ipynb  4_research_supervisor.ipynb  5_full_agent.ipynb  utils.py
notebooks/files/: reasoning.md
notebooks/solutions/: lesson_solutions.ipynb
src/deep_research_from_scratch/: __init__.py  multi_agent_supervisor.py  multi_agent_supervisor_state.py  prompts.py  research_agent.py  research_agent_full.py  research_agent_mcp.py  research_agent_scope.py  research_agent_supervisor.py  scope_research.py  state.py  state_full_agent.py  state_multi_agent_supervisor.py  state_research.py  state_scope.py  utils.py
src/deep_research_from_scratch/files/: coffee_shops_sf.md
